Added java resources

--- a/templates/java.html
+++ b/templates/java.html
@@ -3,6 +3,96 @@
 {% block title %}Java Resources{% endblock %} 
 
 {% block content %} 
-    <h1>Java</h1>
-    <p>This is Java</p>
+<h1 class = "text-light display-4" style="padding: 100px 0 20px 0">Java</h1>
+<hr style="border: 3px dashed white; margin: 0 0 70px 0">
+
+{% comment %} paragraph 1 {% endcomment %}
+<p class="text-light h4">﻿Java is a versatile and platform-independent programming language renowned for its write-once-run-anywhere capability. With a strong emphasis on object-oriented programming, robust memory management, and built-in security features, Java is used in a variety of domains, including web and mobile app development, enterprise-level software, and scientific computing. Its extensive standard library, active developer community, and multi-threading support make it a reliable choice for creating secure, scalable, and high-performance applications</p>
+
+<div style="padding: 50px"></div>
+<p class="text-light h4">
+
+{% comment %} paragraph 2 {% endcomment %}
+<p class="text-light h3">What can you do with Java :
+
+<p class="text-light h4" style="padding: 50px 0 10px 0">> Console Applications: Beginners use Java for basic command-line programs and learning foundational programming concepts.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Simple Web Development: Entry-level web applications using Java Servlets or basic Android app development.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Web Development: Building dynamic websites and web applications using Java-based frameworks like Spring and JavaServer Pages (JSP).</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Android App Development: Developing mobile applications for Android OS using Java.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Enterprise Software: Developing large-scale, backend systems, and server-side applications for businesses.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Distributed Systems: Java is used in building complex distributed systems, including enterprise-level applications and microservices.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Big Data and Cloud Computing: Java plays a vital role in big data processing frameworks like Apache Hadoop and in cloud-based services.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Scientific and Research Computing: Java is used in scientific simulations and data analysis in various research fields.</p>
+
+<div style="padding: 50px"></div>
+
+<h1 class="text-light"> Resources: </h1>
+<hr style="border: 1px dashed white; margin: 0 0 70px 0">
+<h4 class="text-light">Official Documentation: <a class="text-light" href="https://docs.oracle.com/en/java/">https://docs.oracle.com/en/java/</a></h4>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Reading Materials</h3>
+<ul class="list-group bg-dark">
+    {% comment %} element 1 starts {% endcomment %}
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.w3schools.com/java/">W3School</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>    
+    </li>
+    {% comment %} element 1 ends {% endcomment %}
+
+
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.geeksforgeeks.org/java/">GeeksForGeeks</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://dev.java/learn/">DevJava Tutorial</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://jenkov.com/tutorials/java/index.html">Jenkov Tutorial</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.educative.io/courses/learn-java-from-scratch">Educative</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    
+</ul>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Video Materials</h3>
+<ul class="list-group bg-dark">
+    </li><li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://youtu.be/xk4_1vDrzzo?si=V-5VpAzA7vmR5pCb">BroCode Java Full Course</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PL9gnSGHSqcnr_DxHsP7AW9ftq0AtAyYqJ">Java DSA By Kunal Kushwaha</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLWKjhJtqVAbnRT_hue-3zyiuIYj0OlpyG">FreeCodeCamp Full Java playlist</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+</ul>
+
 {% endblock %}
