--- a/templates/cpp.html
+++ b/templates/cpp.html
@@ -1,8 +1,92 @@
 {% extends "base.html" %} 
 
-{% block title %}C++ Resources{% endblock %} 
+{% block title %}Python Resources{% endblock %} 
 
 {% block content %} 
-    <h1>C++</h1>
-    <p>This is C++</p>
+<h1 class = "text-light display-4" style="padding: 100px 0 20px 0">C++</h1>
+<hr style="border: 3px dashed white; margin: 0 0 70px 0">
+
+
+{% comment %} paragraph 1 {% endcomment %}
+<p class="text-light h4">﻿C++ is a powerful and versatile programming language known for its combination of high-level abstractions and low-level control. It supports object-oriented programming, excels in performance-critical applications, and boasts a comprehensive standard library. While its syntax can be intricate, C++ remains a preferred choice for systems programming, game development, and resource-intensive software due to its efficiency and wide range of applications.</p>
+
+<div style="padding: 50px"></div>
+<p class="text-light h4">
+
+{% comment %} paragraph 2 {% endcomment %}
+<p class="text-light h3">What can you do with C++ :
+
+<p class="text-light h4" style="padding: 50px 0 10px 0">> Console Applications: Beginners use C++ for simple text-based programs and learning the fundamentals of programming.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Algorithm Implementation: Basic data structures and algorithms can be practiced and implemented.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Desktop Software: C++ is used to develop desktop applications, including graphical user interfaces (GUIs).</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Game Development: C++ is a primary language for creating high-performance games, game engines, and simulations.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> System Programming: Intermediate users can work on operating systems, device drivers, and low-level software.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Game Development: Pygame offers a platform for creating 2D games.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Embedded Systems: C++ is crucial for programming embedded devices and real-time systems.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> High-Performance Computing: Advanced users leverage C++ for scientific computing, parallel processing, and supercomputing applications.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Networking and Telecommunications: C++ is used in network protocol development and telecom software.</p>
+
+<div style="padding: 50px"></div>
+
+<h1 class="text-light"> Resources: </h1>
+<hr style="border: 1px dashed white; margin: 0 0 70px 0">
+<h4 class="text-light">Official Documentation: <a class="text-light" href="https://devdocs.io/cpp/">https://devdocs.io/cpp/</a></h4>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Reading Materials</h3>
+<ul class="list-group bg-dark">
+    {% comment %} element 1 starts {% endcomment %}
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.w3schools.com/cpp/default.asp">W3School</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>    
+    </li>
+    {% comment %} element 1 ends {% endcomment %}
+
+
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.tutorialspoint.com/cplusplus/index.htm">TutorialPoints</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.geeksforgeeks.org/c-plus-plus/">GeeksForGeeks</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="http://cppreference.com/">CodeReference</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    
+</ul>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Video Materials</h3>
+<ul class="list-group bg-dark">
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://youtu.be/8jLOx1hD3_o?si=XdP8RtwKpsaDwj3p">C++ programming course (FreeCodeCamp)</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li><li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://youtu.be/-TkoO8Z07hI?si=7RnOPtgQ2rIbOrO1">BroCode C++ Full Course</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLlrATfBNZ98dudnM48yfGUldqGD0S4FFb">The Cherno C++ Playlist</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+
 {% endblock %}
