--- a/templates/cpp.html
+++ b/templates/cpp.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Python Resources{% endblock %} 
+{% block title %}C++ Resources{% endblock %} 
 
 {% block content %} 
 <h1 class = "text-light display-4" style="padding: 100px 0 20px 0">C++</h1>
