--- a/templates/about.html
+++ b/templates/about.html
@@ -11,17 +11,29 @@
     <div style="padding: 20px"></div>
     <p class="text-light h4">Welcome to Binary Beasts! We are a dynamic duo in the world of technology—Sourashis Sarkar and Sandip Dey. As avid tech enthusiasts and passionate learners, we're currently pursuing our undergraduate studies in Computer Science at Scaler School of Technology. Our journey in the realm of technology has been fueled by curiosity, dedication, and the desire to make a meaningful impact in this ever-evolving digital landscape. Binary Beasts is a platform where we come together to share our insights, experiences, and knowledge gained through our academic pursuits and beyond. Join us on this exciting adventure as we navigate the complexities of the tech world, conquer challenges, and strive for excellence.</p>
     <div style="padding: 50px"></div>
-    <h1 class="text-light display-3">Send us a message</h1>
     <hr style="border: 1px dashed white">
-
-    <div class="container">
-        <h2>Contact Us</h2>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-
+    <h1 class="text-light h1">Send us a message</h1>
+    <div style="padding: 20px"></div>
+    
+    {% if name %}
+        <div class="container">
+            <center class="text-light h2">
+                Thanks {{ name }}!
+            </center>
+            <center class="text-light h3">
+                We have received your message and will get back to you shortly.
+            </center>
+            <div style="padding: 20px"></div>
+            <button type="submit" class="btn btn-primary"><a class="text-light" href="{% url "about" %}">Go Back</a></button>
+        </div>
+    {% else %}
+        <div class="container">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    {% endif %}
     
 {% endblock %}
