--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {% load static %} <link rel=”stylesheet” href=”{% static 'css/home.css' %}”> 
     {%block css %}{% endblock %}
   </head>
-  <body style="background-color: #22272e; font-family: monospace">
+  <body class="text-light" style="background-color: #22272e; font-family: monospace">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navigation-bar" style="justify-content: space-between">
           <a class="navbar-brand" href="#">Skill Overflow</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
