Fixed a issue in cpp resource

--- a/templates/cpp.html
+++ b/templates/cpp.html
@@ -48,7 +48,7 @@
 
     <li class="list-group-item bg-dark">
         <div style="display:flex; justify-content:space-between">
-            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.tutorialspoint.com/cplusplus/index.htm">TutorialPoints</a></label>
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.tutorialspoint.com/cplusplus/index.html">TutorialPoints</a></label>
             <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
         </div>
     </li>
