--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -34,6 +34,16 @@
                   <a class="dropdown-item" href="{% url "java" %}">Java</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url "cpp" %}">C++</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "html" %}">HTML</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "css" %}">CSS</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "javascript" %}">JavaScript</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "c" %}">C</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "csharp" %}">C#</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -43,7 +53,11 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="{% url "webdev" %}">Web Development</a>
                   <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "datascience" %}">Data Science</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url "machinelearning" %}">Machine Learning</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url "appdev" %}">App Development</a>
                 </div>
               </li>
               <li class="nav-item active">
