--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -43,12 +43,12 @@
           </div>
       </div>
       
-      <div class="card bg-dark" style="width: 30rem; height:20rem">
+      <div class="card bg-dark" style="width: 30rem; height:20rem;">
         <div class="card-body bg-dark">
             <h3 class="card-title display-5 text-light">HTML</h3>
             <hr style="border: 1px dashed white">
             <p class="card-text text-light">HTML is the standard markup language for Web pages. With HTML you can create your own Website. HTML is easy to learn - You will enjoy it!</p>
-            <a href="#" class="btn btn-primary">Coming Soon</a>
+            <a href="{% url 'html' %}" class="btn btn-primary">Learn HTML</a>
         </div>
       </div>
 
@@ -57,7 +57,7 @@
             <h3 class="card-title display-5 text-light">CSS</h3>
             <hr style="border: 1px dashed white">
             <p class="card-text text-light">CSS is the language we use to style an HTML document. CSS describes how HTML elements should be displayed. This tutorial will teach you CSS from basic to advanced.</p>
-            <a href="#" class="btn btn-primary">Coming Soon</a>
+            <a href="{% url 'css' %}" class="btn btn-primary">Learn CSS</a>
         </div>
       </div>
       
@@ -67,7 +67,7 @@
             <hr style="border: 1px dashed white">
             <p class="card-text text-light">
               JavaScript is a versatile language enabling interactive and dynamic web page elements, such as timely updates, interactive maps, animations, and multimedia displays beyond static information.</p>
-            <a href="" class="btn btn-primary">Coming Soon</a>
+            <a href="{% url 'javascript' %}" class="btn btn-primary">Learn JavaScript</a>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
             <h3 class="card-title display-5 text-light">C</h3>
             <hr style="border: 1px dashed white">
             <p class="card-text text-light">C is a powerful general-purpose programming language. It can be used to develop software like operating systems, databases, compilers, and so on. C programming is an excellent language to learn to program for beginners.</p>
-            <a href="#" class="btn btn-primary">Coming Soon</a>
+            <a href="{% url 'c' %}" class="btn btn-primary">Learn C</a>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
             <h3 class="card-title display-5 text-light">C#</h3>
             <hr style="border: 1px dashed white">
             <p class="card-text text-light">C# is a modern, general-purpose, object-oriented programming language developed by Microsoft and approved by European Computer Manufacturers Association (ECMA) and International Standards Organization (ISO).</p>
-            <a href="#" class="btn btn-primary">Coming Soon</a>
+            <a href="{% url 'csharp' %}" class="btn btn-primary">Learn C#</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
             <h3 class="card-title display-5 text-light">Data Science</h3>
             <hr style="border: 1px dashed white">
             <p class="card-text text-light">Explore the field of data science, focusing on data analysis, visualization, and machine learning, using languages like Python and libraries such as Pandas, NumPy, and scikit-learn.</p>
-            <a href="#" class="btn btn-primary">Coming Soon</a>
+            <a href="{% url 'datascience' %}" class="btn btn-primary">Learn Data Science</a>
         </div>
     </div>
 
@@ -133,7 +133,7 @@
           <h3 class="card-title display-5 text-light">App Development</h3>
           <hr style="border: 1px dashed white">
           <p class="card-text text-light">Discover the art of creating mobile applications for Android and iOS using various frameworks and tools such as Flutter, React Native, and Swift.</p>
-          <a href="#" class="btn btn-primary">Coming Soon</a>
+          <a href="{% url 'appdev' %}" class="btn btn-primary">Learn App Development</a>
       </div>
     </div>
   </div>
