added Machine Learning resources

--- a/resources/templates/topics/machinelearning.html
+++ b/resources/templates/topics/machinelearning.html
@@ -3,6 +3,229 @@
 {% block title %}Machine Learning Resources{% endblock %} 
 
 {% block content %} 
-    <h1>Machine Learning</h1>
-    <p>This is Machine Learning</p>
+<h1 class = "text-light display-4" style="padding: 100px 0 20px 0">Machine Learning</h1>
+<hr style="border: 3px dashed white; margin: 0 0 70px 0">
+
+
+{% comment %} paragraph 1 {% endcomment %}
+<p class="text-light h4">
+    Machine learning, a subset of artificial intelligence, is a field that focuses on developing algorithms and statistical models to enable computers to autonomously learn from data, recognize patterns, and make predictions or decisions. It plays a pivotal role in a wide array of applications, from natural language processing and computer vision to recommendation systems and predictive analytics, by harnessing the power of data-driven insights to automate and enhance various tasks.</p>
+
+<div style="padding: 50px"></div>
+<p class="text-light h4">
+
+{% comment %} paragraph 2 {% endcomment %}
+<p class="text-light h3">What can you do with Machine Learning?</p> :
+
+<p class="text-light h4" style="padding: 50px 0 10px 0">> Image Recognition: Beginners use machine learning to identify objects or features in images, such as recognizing handwritten digits.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Spam Detection: Basic applications involve training models to classify emails as spam or not.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Natural Language Processing (NLP): Intermediate users work on tasks like sentiment analysis, chatbots, and language translation.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Recommendation Systems: Developing systems that suggest products, content, or connections based on user preferences and behavior.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Deep Learning: Advanced developers explore deep neural networks for tasks like image and speech recognition, autonomous vehicles, and medical diagnostics.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Reinforcement Learning: Building AI agents that learn optimal decision-making through interaction with environments, used in robotics and game AI.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Autonomous Vehicles: Advanced machine learning algorithms, especially in the field of computer vision, enable self-driving cars to perceive and navigate their surroundings.</p>
+<p class="text-light h4" style="padding: 10px 0 10px 0">> Natural Language Generation (NLG): NLG models generate human-like text from structured data, used in content generation, automated reporting, and chatbots.</p>
+
+<div style="padding: 50px"></div>
+
+<h1 class="text-light">Python Resources: </h1>
+<hr style="border: 1px dashed white; margin: 0 0 70px 0">
+<h4 class="text-light">Official Documentation: <a class="text-light" href="https://docs.python.org/3/">https://docs.python.org/3/</a></h4>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Reading Materials</h3>
+<ul class="list-group bg-dark">
+    {% comment %} element 1 starts {% endcomment %}
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://pyflo.net/">PyFlo</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>    
+    </li>
+    {% comment %} element 1 ends {% endcomment %}
+
+
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.w3schools.com/python/">W3Schools</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.geeksforgeeks.org/python-programming-language/">GeeksForGeeks</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.tutorialspoint.com/python/index.htm">TutorialsPoint</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    
+</ul>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Video Materials</h3>
+<ul class="list-group bg-dark">
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://youtu.be/nLRL_NcnK-4?si=reICp1RqPfwOryIX">Harvard CS50 - Intro to Programming with Python (FreeCodeCamp)</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li><li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/watch?v=XKHEtdqhLK8">BroCode Python Full Course</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLsyeobzWxl7poL9JTVyndKe62ieoN-MZ3">Telusko Python Playlist</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-mFu00qxl0a67RhjjZj3jXm">TechWithTim Python for Beginners</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+</ul>
+
+<div style="padding: 50px"></div>
+
+<h1 class="text-light">SciKit Learn Resources: </h1>
+<hr style="border: 1px dashed white; margin: 0 0 70px 0">
+<h4 class="text-light">Official Documentation: <a class="text-light" href="https://scikit-learn.org/stable/">https://scikit-learn.org/stable/</a></h4>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Reading Materials</h3>
+<ul class="list-group bg-dark">
+    {% comment %} element 1 starts {% endcomment %}
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.geeksforgeeks.org/learning-model-building-scikit-learn-python-machine-learning-library/">Geeks For Geeks</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>    
+    </li>
+    {% comment %} element 1 ends {% endcomment %}
+
+
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.tutorialspoint.com/scikit_learn/index.htm">Tutorials Point</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.simplilearn.com/tutorials/python-tutorial/scikit-learn">Simple Learn</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.dataquest.io/blog/sci-kit-learn-tutorial/">DataQuest</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    
+</ul>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Video Materials</h3>
+<ul class="list-group bg-dark">
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://youtu.be/pqNCD_5r0IU?si=MwtJ9apSzU5c6Uog">SciKit-Learn Course (FreeCodeCamp)</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li><li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLVHgQku8Z9348d6xguTn8zbcUYntz3dQG">Intellipaat playlist</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLS1QulWo1RIa7ha9SewcZlsTQVwL7n7oq">Programming Knowledge Playlist</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLeo1K3hjS3uvCeTYTeyfe0-rN5r8zn9rw">CodeBasics Playlist for ML Beginners</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+</ul>
+
+<h1 class="text-light">TensorFlow Resources: </h1>
+<hr style="border: 1px dashed white; margin: 0 0 70px 0">
+<h4 class="text-light">Official Documentation: <a class="text-light" href="https://www.tensorflow.org/">https://www.tensorflow.org/</a></h4>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Reading Materials</h3>
+<ul class="list-group bg-dark">
+    {% comment %} element 1 starts {% endcomment %}
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.tutorialspoint.com/tensorflow/index.htm">Tutorials Point</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>    
+    </li>
+    {% comment %} element 1 ends {% endcomment %}
+
+
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.geeksforgeeks.org/introduction-to-tensorflow/">Geeks For Geeks</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.javatpoint.com/tensorflow">JavaPoint Tutorial</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.guru99.com/tensorflow-tutorial.html">Guru99</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    
+</ul>
+
+<div style="padding: 30px"></div>
+
+<h3 class="text-light"> Video Materials</h3>
+<ul class="list-group bg-dark">
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://youtu.be/tPYj3fFJGjk?si=PVIKsAtcljjzv1IX">Tensorflow 2.0 Full Course (FreeCodeCamp)</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li><li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLOU2XLYxmsII9mzQ-Xxug4l2o04JBrkLV">Machine Learning Foundations By Google</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+    <li class="list-group-item bg-dark">
+        <div style="display:flex; justify-content:space-between">
+            <label class="form-check-label h4" for="firstCheckbox"><a class="text-light" href="https://www.youtube.com/playlist?list=PLeo1K3hjS3uu7CxAacxVndI4bE_o3BDtO">CodeBasic Tensorflow Playlist</a></label>
+            <div><input class="form-check-input h3 lg" style="width: 0.75em;height: 0.75em;" type="checkbox" value="" id="firstCheckbox"></div>
+        </div>
+    </li>
+</ul>
+
 {% endblock %}
